# primus-fhe

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile  multiprocess-run-fin.py
algebra/: Cargo.toml
algebra/benches/: fast_reduce_bench.rs  field_ntt.rs  gcd_bench.rs  modulus_bench.rs  ntt_bench.rs  sample.rs
algebra/examples/: field.rs  gaussian.rs  ring.rs
algebra/src/: basis.rs  decompose_basis.rs  derive.rs  error.rs  lib.rs  primitive.rs  random.rs
algebra/src/arith/: gcd.rs  minus_one.rs  mod.rs  prim_root.rs
algebra/src/baby_bear/: babybear_ntt.rs  extension.rs  mod.rs
algebra/src/decompose/: mod.rs  non_pow_of_2.rs  pow_of_2.rs
algebra/src/error/: mod.rs
algebra/src/extension/: binomial_extension.rs  helper.rs  mod.rs
algebra/src/field/: baby_bear.rs  distribution.rs  fp32.rs  goldilocks.rs  impls.rs  macros.rs  mod.rs  ntt.rs  ntt_field.rs  ntt_fields.rs  packed.rs  prime_fields.rs
algebra/src/goldilocks/: extension.rs  goldilocks_ntt.rs  mod.rs
algebra/src/integer/: bits.rs  bounded.rs  bytes.rs  checked.rs  mod.rs  overflowing.rs  two.rs  wrapping.rs
algebra/src/modulo/: mod.rs  primitive.rs
algebra/src/modulo_traits/: mod.rs  ops.rs  primitive.rs
algebra/src/modulus/: internal_macros.rs  mod.rs  ops.rs
algebra/src/ntt/: mod.rs
algebra/src/numeric/: mod.rs
algebra/src/polynomial/: mod.rs  native_polynomial.rs  ntt_polynomial.rs  polynomial_traits.rs
algebra/src/primitive/: bits.rs  mod.rs
algebra/src/random/: mod.rs  numeric.rs
algebra/src/reduce/: lazy_ops.rs  macros.rs  mod.rs  ops.rs  primitive.rs
algebra/src/ring/: mod.rs
algebra/src/transformation/: concrete.rs  mod.rs  ntt_table.rs
algebra/src/utils/: aes.rs  block.rs  gcd.rs  (+9 more)
algebra/tests/: derive_test.rs  extension_test.rs  field.rs  multivaraite_test.rs  multivariate_test.rs  polynomial_test.rs  transform.rs
arithmetic/: Cargo.toml
arithmetic/src/: constants.rs  lib.rs  primitive.rs
bool/: Cargo.toml
bool/benches/: bfhe.rs
bool/examples/: bfhe.rs  count_ntt.rs
bool/src/: encrypt.rs  key_gen.rs  lib.rs
boolean_fhe/: Cargo.toml
boolean_fhe/benches/: bfhe.rs  boolean_fhe.rs  nand_bench.rs
boolean_fhe/examples/: boolean_fhe.rs  count_ntt.rs  fhe.rs
boolean_fhe/src/: allocator.rs  ciphertext.rs  decrypt.rs  encrypt.rs  error.rs  evaluate.rs  evaluation_key.rs  key_gen.rs  key_switching_key.rs  lib.rs  lut.rs  parameter.rs  plaintext.rs  secret_key.rs
boolean_fhe/tests/: boolean_fhe_test.rs
boolean_ntru_fhe/: Cargo.toml
boolean_ntru_fhe/benches/: bnfhe.rs
boolean_ntru_fhe/examples/: final.rs
boolean_ntru_fhe/src/: ciphertext.rs  error.rs  evaluation_key.rs  key_switching_key.rs  lib.rs  parameter.rs  plaintext.rs  secret_key.rs
crates/primus_decompose/: Cargo.toml
crates/primus_factor/: Cargo.toml
crates/primus_lattice/: Cargo.toml
crates/primus_ntt/: Cargo.toml
crates/primus_poly/: Cargo.toml
crates/primus_reduce/: Cargo.toml
crates/primus_rns/: Cargo.toml
fhe/: Cargo.toml
fhe/src/: lib.rs
fhe_cmp/: Cargo.toml  readme.md
fhe_cmp/benches/: cmp_bench.rs  compare_fhe.rs
fhe_cmp/examples/: check.rs  cmp.rs  fhe_hmsb.rs  profile.rs
fhe_cmp/src/: bootstrap.rs  cmp.rs  compare.rs  decrypt.rs  encrypt.rs  fbs.rs  hcmp.rs  key_gen.rs  lib.rs  parameters.rs  secret_key.rs
fhe_cmp/tests/: cmp_test.rs
fhe_core/: Cargo.toml
fhe_core/benches/: rlwe_mul_rgsw.rs  trace.rs
fhe_core/src/: automorphism.rs  bool_plaintext.rs  ciphertext.rs  error.rs  key_switch.rs  lib.rs  modulus_switch.rs  parameter.rs  plaintext.rs  public_key.rs  secret_key.rs  trace.rs  utils.rs
fhe_core/tests/: he.rs
lattice/: Cargo.toml
lattice/benches/: lwe_bench.rs  rlwe_bench.rs
lattice/src/: gadget.rs  lib.rs  lwe.rs  ntru.rs  rgsw.rs  rlwe.rs  utils.rs
lattice/tests/: lattice_test.rs
network/: Cargo.toml  netio.rs
network/src/: common.rs  error.rs  lib.rs  netio.rs  node_service.rs  rsio_grpc.rs
network/tests/: test.rs
pcs/: Cargo.toml  todo.txt
pcs/benches/: brakedown_pcs.rs  packing.rs  raw_brakedown_bench.rs  raw_protocol_bench.rs  raw_shockwave_bench.rs  tensor_brakedown_bench.rs
pcs/examples/: brakedown_pcs.rs  code.rs  proof_size.rs  raw_brakedown.rs  raw_protocol.rs
pcs/src/: lib.rs  multilinear.rs  transcript.rs  utils.rs
pcs/tests/: test_code.rs  test_pcs.rs
primus_modulus/: Cargo.toml
primus_modulus/src/: lib.rs
primus_modulus/tests/: barrett_modulus.rs  compact_modulus.rs  pow_of_two_modulus.rs  uint_modulus.rs
test_try/: Cargo.toml
test_try/src/: main.rs
thfhe/: Cargo.toml
thfhe/batch/: ip.txt  multiprocess-run-fin.py  multiprocess-run-thfhe.py  multiprocess-run-triples.py  run_test_triples.py  run_thfhe.py  tc_auto_control.sh  tc_control.sh
thfhe/examples/: thfhe.rs
thfhe/predata/: triples_P_0.txt  triples_P_1.txt
thfhe/src/: distdec.rs  encrypt.rs  evaluate.rs  key_gen.rs  lib.rs  lwe.rs  rlwe.rs  secret_key.rs
thfhe/triples/: .gitignore  CMakeLists.txt  multiprocess-run-triples.py  quickrun.py  run_test_triples.py  test_triples
vfhe/: Cargo.toml
vfhe/benches/: nand_bench.rs
vfhe/examples/: fhe.rs
vfhe/src/: cipher.rs  ciphertext.rs  functional_bootstrapping.rs  keygen.rs  lib.rs  parameter.rs  params.rs  plain.rs  plaintext.rs  pubkey.rs  publickey.rs  scheme.rs  seckey.rs  secretkey.rs
zkfhe/: Cargo.toml
zkfhe/benches/: zk_bfhe.rs  zk_bnfhe.rs
zkfhe/examples/: count_ntt.rs  encode.rs  zk_bfhe.rs  zk_bnfhe.rs
zkfhe/src/: decrypt.rs  encrypt.rs  key_gen.rs  lib.rs
zkfhe/tests/: zk_bfhe_test.rs  zk_bnfhe_test.rs
zkp/: Cargo.toml
zkp/benches/: range_check_bit_decomposition.rs  range_check_lookup.rs
zkp/examples/: accumulator.rs  addition_in_zq.rs  bit_decomposition.rs  floor.rs  lift.rs  lookup.rs  ntt.rs  rlwe_mult_rgsw.rs  round.rs  test_zq_to_rq.rs  zq_to_rq.rs
zkp/src/: utils.rs
zkp/tests/: test_accumulator.rs  test_addition_in_zq.rs  test_bit_decomposition.rs  test_floor.rs  test_lift.rs  test_lookup.rs  test_ntt.rs  test_ntt_revision.rs  test_range_check.rs  test_rlwe_mult_rgsw.rs  test_round.rs  test_sumcheck.rs  test_zq_rq.rs  test_zq_to_rq.rs
(+758 files in other folders)
