[workspace]
members = [
    "primus_data",
    "primus_gcd",
    "primus_integer",
    "primus_modulo",
    "primus_modulus",
    "primus_reduce",
]
resolver = "3"

[workspace.dependencies]
num-traits = "0.2"
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.8"
bytemuck = "1.25.0"
paste = "1.0"
thiserror = "2"

criterion = "0.8"
