[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.dependencies]
num-traits = "0.2"
rand = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.9"
bytemuck = "1.25.0"
paste = "1.0"
thiserror = "2"
itertools = "0.15.0"
rayon = "1.12"

criterion = "0.8"
comfy-table = "7.1"
