[package]
name = "algebra"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
num-traits = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
itertools = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
nightly = []

[[bench]]
name = "gcd_bench"
harness = false

[[bench]]
name = "fast_reduce_bench"
harness = false

[[bench]]
name = "ntt_bench"
harness = false

[[bench]]
name = "field_ntt"
harness = false

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
