[package]
name = "algebra"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
num-traits = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
itertools = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
concrete-ntt = { git = "https://github.com/primus-labs/concrete-ntt", branch = "dev", default-features = false, optional = true }
bigdecimal = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rug = "=1.27"

[dev-dependencies]
criterion = { workspace = true }
serde = { version = "1", features = ["derive"] }
csv = "1.3"

[features]
default = ["concrete-ntt"]
concrete-ntt = ["dep:concrete-ntt", "concrete-ntt/std"]
nightly = ["concrete-ntt?/nightly"]

[[bench]]
name = "gcd_bench"
harness = false

[[bench]]
name = "fast_reduce_bench"
harness = false

[[bench]]
name = "ntt_bench"
harness = false
required-features=["concrete-ntt"]

[[bench]]
name = "field_ntt"
harness = false

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
