[package]
name = "arithmetic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# thiserror = "1.0"

# num-traits = "0.2"

# zeroize = { version = "1.6", optional = true }

[features]
default = []
# rayon
# serde
# zeroize
# zeroize_derive = ["zeroize/zeroize_derive"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
