[package]
name = "boolean_ntru_fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }
lattice = { path = "../lattice" }

thiserror = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3.1"
rayon = { workspace = true }

[dev-dependencies]
