[package]
name = "fhe_cmp"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { path = "../algebra", default-features = false }
lattice = { path = "../lattice", default-features = false }
fhe_core = { path = "../fhe_core", default-features = false }
boolean_fhe ={ path = "../boolean_fhe", default-features = false }

num-traits = { workspace = true }
rand = { workspace = true }
itertools = { workspace = true }

rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
nightly = ["algebra/nightly", "lattice/nightly", "fhe_core/nightly"]


[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
[[bench]]
name = "compare_fhe"
harness = false