[package]
name = "fhe_core"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { path = "../algebra", default-features = false }
lattice = { path = "../lattice", default-features = false }

thiserror = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }

[features]
default = []
nightly = ["algebra/nightly", "lattice/nightly"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
