[package]
name = "fhe_core"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { path = "../algebra", default-features = false }
lattice = { path = "../lattice", default-features = false }

thiserror = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
bigdecimal = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["concrete-ntt"]
concrete-ntt = ["algebra/concrete-ntt", "lattice/concrete-ntt"]
nightly = ["algebra/nightly", "lattice/nightly"]

[[bench]]
name = "trace"
harness = false

[[bench]]
name = "rlwe_mul_rgsw"
harness = false

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
