[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra", default-features = false }

num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["concrete-ntt"]
concrete-ntt = ["algebra/concrete-ntt"]
nightly = ["algebra/nightly"]

[[bench]]
name = "lwe_bench"
harness = false

[[bench]]
name = "rlwe_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
