[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { path = "../algebra", default-features = false }

num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bytemuck = { workspace = true }
rayon = { workspace = true }

[features]
default = ["concrete-ntt"]
concrete-ntt = ["algebra/concrete-ntt"]
nightly = ["algebra/nightly"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
