[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
grpcio = { workspace = true }
protobuf = { workspace = true }
protobuf-codegen = { workspace = true }
protoc = { workspace = true }

anyhow = { workspace = true }
futures = { workspace = true }
futures-executor = { workspace = true }
futures-timer = { workspace = true }
futures-util = { workspace = true }

structopt = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }

crossbeam = { workspace = true }
crossbeam-channel = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
