[package]
name = "pcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }

thiserror = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true}

itertools = "0.12.1"
sha3 = "0.10.6"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "tensor_brakedown_bench"
harness = false

[[bench]]
name = "raw_brakedown_bench"
harness = false