[package]
name = "primus_modulus"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primus-labs/primus-fhe"

[dependencies]
primus_gcd = { path = "../primus_gcd" }
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_barrett_derive = { path = "../primus_barrett_derive", optional = true }

num-traits = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[features]
default = ["derive"]
derive = ["dep:primus_barrett_derive"]
simd = ["primus_integer/simd", "primus_barrett_derive?/simd"]
