[package]
name = "test_try"
version = "0.1.0"
edition = "2021"

[dependencies]
algebra = { path = "../algebra" }
lattice = { path = "../lattice" }
fhe_core = { path = "../fhe_core" }
fhe_cmp = { path = "../fhe_cmp" }
rand = { workspace = true }
rayon = { workspace = true }
once_cell = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }

