[package]
name = "thfhe"
version = "0.1.0"
edition = "2021"

[dependencies]
mpc = { path = "../mpc" }
network = { version = "0.1.0", path = "../network" }

algebra = { path = "../algebra", default-features = false }
lattice = { path = "../lattice", default-features = false }
fhe_core = { path = "../fhe_core", default-features = false }

itertools = { workspace = true }

rand = { workspace = true }
crossbeam = "0.8.4"
threadpool = "1.8.1"