[package]
name = "vfhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }
lattice = { path = "../lattice" }

rand_distr = "0.4"
rand = "0.8"

num-traits = "0.2"
num-bigint = "0.4"

[dev-dependencies]
once_cell = "1.19"
rand_chacha = "0.3.1"

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps
