[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }

rand = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = "0.3.1"
serde = {workspace = true}
itertools = "0.12.1"

criterion = { workspace = true }

[[bench]]
name = "range_check_lookup"
harness = false

[[bench]]
name = "range_check_bit_decomposition"
harness = false