[package]
name = "zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }
fhe_core = { path = "../fhe_core" }
pcs = { path = "../pcs" }

rand = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = "0.3.1"
serde = {workspace = true}
itertools = "0.12.1"

[target.'cfg(all(unix, any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64", target_env = "gnu"))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]
sha2 = { workspace = true }
