[package]
name = "primus_reduce"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primus-labs/primus-fhe"

[dependencies]
primus_integer = { path = "../primus_integer" }

thiserror = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }