[package]
name = "primus_rns"
version = "0.1.0"
edition = "2024"

[dependencies]
primus_data = { path = "../primus_data" }
primus_gcd = { path = "../primus_gcd" }
primus_integer = { path = "../primus_integer" }
primus_reduce = { path = "../primus_reduce" }
primus_modulo = { path = "../primus_modulo" }
primus_modulus = { path = "../primus_modulus" }
primus_factor = { path = "../primus_factor" }
primus_poly = { path = "../primus_poly" }

thiserror = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[features]
default = []
simd = [
    "primus_integer/simd",
    "primus_modulus/simd",
    "primus_factor/simd",
    "primus_poly/simd",
]

[[bench]]
name = "decompose"
harness = false
